--- a/src/app/Header/header.component.html
+++ b/src/app/Header/header.component.html
@@ -7,18 +7,18 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Recipes</a>
+          <a class="nav-link" href="#" (click)="onSelect('recipe')">Recipes</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Shopping List</a>
+            <a class="nav-link" href="#" (click)="onSelect('shopping-list')">Shopping List</a>
         </li>
       </ul>
       <ul class='navbar-nav ml-auto'>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown" appDropdown #r="appDropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Manage
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" [ngClass]="{'show':r.isOpen}">
             <a class="dropdown-item" href="#">Action</a>
             <a class="dropdown-item" href="#">Another action</a>
             <div class="dropdown-divider"></div>
