--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,17 @@
-<p>recipe-item works!</p>
+<a
+href="#"
+class="list-group-item clearfix"
+(click)="onSelected()"
+>
+<div class="float-left">
+    <h5 class="list-group-item-heading">{{ recipe.name }}</h5>
+    <p class="list-group-item-text" style="margin-bottom: 0rem;">{{ recipe.description }}</p>
+</div>
+<span class="float-right">
+    <img
+    [src]="recipe.imagePath"
+    alt="{{ recipe.name }}"
+    class="img-responsive"
+    style="max-height: 50px;">
+</span>
+</a>
