--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,7 +3,10 @@
       <app-recipe-list></app-recipe-list>
     </div>
     <div class="col-md-8">
-      <app-recipe-detail></app-recipe-detail>
+      <app-recipe-detail *ngIf="selectedRecipe; else notSelected" [recipe]="selectedRecipe"></app-recipe-detail>
+      <ng-template #notSelected>
+        Please choose a Recipe.
+      </ng-template>
     </div>
   </div>
   
