--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,11 +4,11 @@
             <div class='row'>
                 <div class="col-sm-5 col-md-4 form-group">
                     <label for="name">Name</label>
-                    <input type="text" id="name" class='form-control'>
+                    <input type="text" id="name" class='form-control' #nameInput>
                 </div>
                 <div class="col-sm-2 col-md-2 form-group">
                     <label for="amount">Amount</label>
-                    <input type="number" id="amount" class='form-control'>
+                    <input type="number" id="amount" class='form-control' #amountInput>
                 </div>
             </div>
         </form>
@@ -16,7 +16,7 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-        <button type='button' class='btn btn-success mr-1'>Add</button>
+        <button type='button' class='btn btn-success mr-1' (click)="onAddItem()">Add</button>
         <button type='button' class='btn btn-danger mr-1'>Delete</button>
         <button type='button' class='btn btn-primary'>Clear</button>
     </div>
