--- a/src/app/Header/header.component.html
+++ b/src/app/Header/header.component.html
@@ -6,23 +6,21 @@
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#" (click)="onSelect('recipe')">Recipes</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#" (click)="onSelect('shopping-list')">Shopping List</a>
+        <li routerLinkActive="active" class="nav-item"><a routerLink="/recipes" class="nav-link">Recipes</a></li>
+        <li routerLinkActive="active" class="nav-item">
+            <a routerLink="/shoppingList" class="nav-link">Shopping List</a>
         </li>
       </ul>
       <ul class='navbar-nav ml-auto'>
         <li class="nav-item dropdown" appDropdown #r="appDropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" style="cursor: pointer;" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Manage
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" [ngClass]="{'show':r.isOpen}">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" style="cursor: pointer;">Action</a>
+            <a class="dropdown-item" style="cursor: pointer;">Another action</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" style="cursor: pointer;">Something else here</a>
           </div>
         </li>
       </ul>
