--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,15 +1,15 @@
 <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-md-12">
       <img src="{{recipe.imagePath}}" alt="{{recipe.name}}" class="img-responsive" style="max-height: 200px;">
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-md-12">
       <h1>{{recipe.name}}</h1>
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-md-12">
       <div class="btn-group" appDropdown #r="appDropdown">
         <button
           type="button"
@@ -17,21 +17,25 @@
           Manage Recipe <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" [ngClass]="{'show':r.isOpen}">
-          <li><a href="#">To Shopping List</a></li>
-          <li><a href="#">Edit Recipe</a></li>
-          <li><a href="#">Delete Recipe</a></li>
+          <li><a (click)='onAddToShoppingList()' style="cursor:pointer;">To Shopping List</a></li>
+          <li><a style="cursor:pointer;" (click)="onEditRecipe()">Edit Recipe</a></li>
+          <li><a style="cursor:pointer;">Delete Recipe</a></li>
         </ul>
       </div>
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-md-12">
       {{recipe.description}}
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12">
-      Ingredients
+    <div class="col-xs-12 col-md-7">
+      <ul class='list-group'>
+        <li class='list-group-item' *ngFor='let ingredient of recipe.ingredients'>
+          {{ingredient.name}} - {{ingredient.amount}}
+        </li>
+      </ul>
     </div>
   </div>
   
