--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,7 +1,8 @@
 <a
-href="#"
+style="cursor: pointer;"
 class="list-group-item clearfix"
-(click)="onSelected()"
+[routerLink]="[index]"
+routerLinkActive="active"
 >
 <div class="float-left">
     <h5 class="list-group-item-heading">{{ recipe.name }}</h5>
