--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,12 +1,12 @@
 <div class="row">
     <div class="col-md-12">
-      <button class="btn btn-success btn-md">New Recipe</button>
+      <button class="btn btn-success btn-md" (click)="onNewRecipe()">New Recipe</button>
     </div>
   </div>
   <hr>
   <div class="row">
     <div class="col-md-12">
-      <app-recipe-item *ngFor="let recipeItem of recipes" [recipe]="recipeItem"></app-recipe-item>
+      <app-recipe-item *ngFor="let recipeItem of recipes; let i=index" [recipe]="recipeItem" [index]="i"></app-recipe-item>
     </div>
   </div>
   
