--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,23 +1,24 @@
-<div class="row">
-    <div class="col-md-12">
-        <form>
+<form (ngSubmit)="onModifyItem(f)" #f="ngForm">
+    <div class="row">
+        <div class="col-md-12">          
             <div class='row'>
                 <div class="col-sm-5 col-md-4 form-group">
                     <label for="name">Name</label>
-                    <input type="text" id="name" class='form-control' #nameInput>
+                    <input type="text" id="name" class='form-control' name="name" required ngModel>
                 </div>
                 <div class="col-sm-2 col-md-2 form-group">
                     <label for="amount">Amount</label>
-                    <input type="number" id="amount" class='form-control' #amountInput>
+                    <input type="number" id="amount" class='form-control' name="amount" required ngModel
+                    pattern='^[1-9][0-9]*$'>
                 </div>
             </div>
-        </form>
+        </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-md-12">
-        <button type='button' class='btn btn-success mr-1' (click)="onAddItem()">Add</button>
-        <button type='button' class='btn btn-danger mr-1'>Delete</button>
-        <button type='button' class='btn btn-primary'>Clear</button>
+    <div class="row">
+        <div class="col-md-12">
+            <button type='submit' class='btn btn-success mr-1' [disabled]='!f.valid'>{{editMode ? 'Update' : 'Add'}}</button>
+            <button type='button' class='btn btn-danger mr-1' (click)='onDelete()' *ngIf="editMode">Delete</button>
+            <button type='button' class='btn btn-primary' (click)="onClear()">Clear</button>
+        </div>
     </div>
-</div>
+</form>
