--- a/src/app/Header/header.component.html
+++ b/src/app/Header/header.component.html
@@ -6,19 +6,24 @@
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
-        <li routerLinkActive="active" class="nav-item"><a routerLink="/recipes" class="nav-link">Recipes</a></li>
+        <li routerLinkActive="active" class="nav-item"><a routerLink="/recipes" class="nav-link" *ngIf='isAuthenticated'>Recipes</a></li>
+        <li routerLinkAcive="active" class="nav-item"><a routerLink="/auth" class="nav-link" *ngIf='!isAuthenticated'>Authenticate</a></li>
         <li routerLinkActive="active" class="nav-item">
             <a routerLink="/shoppingList" class="nav-link">Shopping List</a>
         </li>
       </ul>
       <ul class='navbar-nav ml-auto'>
+        <li routerLinkActive="active" class="nav-item" *ngIf='isAuthenticated'>
+          <a class="nav-link" (click)='onLogout()'>Logout</a>      
+        </li>
         <li class="nav-item dropdown" appDropdown #r="appDropdown">
-          <a class="nav-link dropdown-toggle" style="cursor: pointer;" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" style="cursor: pointer;" id="navbarDropdown" 
+          role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" *ngIf='isAuthenticated'>
             Manage
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" [ngClass]="{'show':r.isOpen}">
-            <a class="dropdown-item" style="cursor: pointer;">Action</a>
-            <a class="dropdown-item" style="cursor: pointer;">Another action</a>
+            <a class="dropdown-item" style="cursor: pointer;" (click)='onSaveData()'>Save Data</a>
+            <a class="dropdown-item" style="cursor: pointer;" (click)='onFetchData()'>Fetch Data</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" style="cursor: pointer;">Something else here</a>
           </div>
