--- a/src/app/recipes/recipe-edit/recipe-edit.component.css
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.css
@@ -1,3 +1,7 @@
 .container-fluid{
     padding-left:10%;
 }
+
+input.ng-invalid.ng-touched,textarea.ng-invalid.ng-touched{
+    border: 1px solid red;
+}
