--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -26,8 +26,12 @@
                 </div>
                 <div class='row'>
                     <div class='col-xs-12'>
-                        <img [src]='imagePath.value' class='img-responsive' style='max-height: 300px;'>
+                      <div class='form-group'>
+                      <div class='text-center'>
+                        <img [src]='imagePath.value' class='img-responsive' style='max-height: 300px;margin-left:15px;'>
                     </div>
+                  </div>
+                  </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-12 col-md-12">
@@ -60,5 +64,5 @@
                 </div>
             </form>
         </div>
-    </div> 
+    </div>
 </div>
